Fix alignment and responsiveness issues.

--- a/src/index.css
+++ b/src/index.css
@@ -12,22 +12,17 @@ body {
   height: 607px;
   width: 100%;
   display: flex;
-  background-color: #9f8e63;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   width: 1180px;
 }
 
 #header-text {
-  width: 835px;
-  height: 88px;
-
   font-family: Nunito Sans;
   font-style: normal;
   font-weight: 600;
-  font-size: 72px;
-  line-height: 98px;
 
+  font-size: 72px;
   color: #ffffff;
 }
 
@@ -52,6 +47,7 @@ body {
 
 .divider {
   height: 2px;
+  width: 97%;
   margin-top: 50px;
   background: #d0cde1;
 }
@@ -93,19 +89,17 @@ body {
 }
 
 .github-id-nd-avatar-section {
-  height: fit-content;
-  width: 1021.66px;
-  margin-top: 0.38px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  width: 73%;
+  display: grid;
+  margin-top: 50px;
+  grid-template-columns: 60% 40%;
+  grid-auto-rows: 190px;
 }
 
 .github-id-nd-avatar {
-  display: flex;
+  cursor: pointer;
   align-items: center;
-  flex: 50%;
-  margin-top: 90px;
+  display: flex;
 }
 
 #avatar {
@@ -164,9 +158,7 @@ body {
   width: 100%;
   height: 96px;
   margin-top: 63px;
-
   background: #3f3d56;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -188,16 +180,15 @@ body {
 
 .modal {
   position: absolute;
-  display: flex;
-  justify-content: center;
   width: 1040px;
+  /* width: 77%; */
   height: 1200px;
   top: 133px;
   left: 0;
   right: 0;
   margin: auto;
   display: none;
-  background: #ffffff;
+  background: #e5e5e5;
 }
 
 #modal-heading {
@@ -237,7 +228,7 @@ body {
   height: 50px;
   margin-top: 21px;
 
-  margin-left: 80px;
+  margin-left: 8%;
 
   background: #ffffff;
   border: 1px solid #d0cde1;
@@ -278,6 +269,11 @@ body {
   color: #ffffff;
 }
 
+.details-page {
+  flex-direction: column;
+  display: none;
+}
+
 .details-page-header {
   background-color: #2f2e41;
   height: 100px;
@@ -294,6 +290,7 @@ body {
   font-size: 24px;
   color: #ffffff;
   padding-left: 34px;
+  cursor: pointer;
 }
 
 #details-page-header-right-text {
@@ -303,6 +300,7 @@ body {
   font-size: 24px;
   color: #ffffff;
   padding-right: 24px;
+  cursor: pointer;
 }
 
 .avatar-and-summary {
@@ -429,6 +427,16 @@ body {
   color: #3f3d56;
 }
 
+#repo-link {
+  text-decoration: none;
+  color: 3f3d56;
+}
+
+#blog {
+  text-decoration: none;
+  color: #3f3d56;
+}
+
 @media screen and (max-width: 1025px) {
   .avatar-and-summary {
     flex-direction: column;
@@ -437,17 +445,28 @@ body {
     text-align: center;
   }
 
+  #github-id {
+    margin-left: 12px;
+  }
+
+  .divider {
+    margin-top: 25px;
+  }
+
   #details-page-header-left-text,
   #details-page-header-right-text {
     font-size: 16px;
   }
 
   #details-page-avatar {
-    margin-left: 8.33%;
+    margin-left: 0px;
     background: #7c639f;
-    border-radius: 50%;
     height: 100px;
     width: 100px;
+  }
+
+  #developer-summary{
+    margin-left: 0px;
   }
 
   #developer-name {
@@ -471,10 +490,19 @@ body {
     width: 17.96px;
   }
 
+  .github-id-nd-avatar-section {
+    grid-auto-rows: 50px;
+    margin-top: 20px;
+  }
+
+  #north-east-icon {
+    font-size: 12px;
+    margin-left: 8px;
+  }
+
   .developer-other-details {
-    color: #3f3d56;
-    margin-left: -17.84px;
-    margin-top: 24.87px;
+    display: flex;
+    flex-direction: row;
   }
 
   .other-details-logo {
@@ -482,6 +510,10 @@ body {
     height: 10px;
     width: 10px;
     margin-left: 23.67px;
+  }
+
+  #user-location {
+    margin-left: -23.67px;
   }
 
   .other-details-text {
@@ -504,47 +536,127 @@ body {
   }
 
   #header-img {
-    height: 450px;
-    width: 550px;
+    height: 350;
+    width: 350px;
   }
 
   .header-content {
-    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: center;
   }
 
   #header-text {
-    font-size: 20px;
+    font-size: 36px;
+    text-align: center;
+    margin-top: 30px;
   }
 
-  #below-header-text{
+  #below-header-text {
     font-size: 20px;
+    margin-top: 25px;
   }
 
-  #search-box-div{
+  #search-box-div {
     width: 278px;
     height: 27.77px;
     border-radius: 15px;
+    margin-top: 12px;
   }
 
-  #search-input-box{
+  #search-input-box {
     width: 240.08px;
     height: 15px;
     border-radius: 15px;
     font-size: 12px;
   }
 
-  #search-icon{
+  #search-icon {
     height: 14.07px;
     width: 14.07px;
   }
 
-  #avatar{
+  #avatar {
     height: 20.83px;
     width: 20.83px;
   }
 
-  #github-id{
-      font-size: 12px;
+  #github-id {
+    font-size: 12px;
   }
 
+  #add-developer-btn {
+    height: 30px;
+    width: 180px;
+    font-size: 12px;
+    margin-top: 0px;
+  }
+
+  #could-not-find-text {
+    font-size: 16px;
+    margin-top: 25px;
+  }
+
+  #footer-text {
+    font-size: 10px;
+  }
+
+  #repo-name {
+    font-size: 14px;
+  }
+
+  #repo-desc {
+    font-size: 14px;
+  }
+
+  #repo-created-at {
+    font-size: 14px;
+  }
+
+  .link-input-box {
+    width: 250px;
+    height: 40px;
+    margin-left: 20px;
+  }
+
+  #modal-heading {
+    font-size: 15px;
+    margin-left: 20px;
+  }
+
+  #website-logo {
+    margin-left: -55px;
+    height: 12px;
+    width: 12px;
+  }
+
+  #website-link {
+    font-size: 15px;
+    margin-left: 8px;
+  }
+
+  .cancel-nd-submit {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  #submit-btn {
+    height: 30px;
+    width: 80px;
+    font-size: 15px;
+    border-radius: 10px;
+  }
+
+  #cancel-label {
+    font-size: 15px;
+    margin-left: 42px;
+  }
+
+  .modal {
+    height: 970px;
+    width: 350px;
+  }
+
+  .footer {
+    margin-top: 30px;
+  }
 }
